output/wiselending_p5_25_124/foundry_validation/F-001_Exact-amount_borrows_and_withdrawals_can/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:437:21:
    |
437 |         tokens[1] = 0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48; // USDC
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xdAC17F958D2ee523a2206206994597C13D831ec7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xdAC17F958D2ee523a2206206994597C13D831ec7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:438:21:
    |
438 |         tokens[2] = 0xdac17f958d2ee523a2206206994597c13d831ec7; // USDT
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x6B175474E89094C44Da98b954EedeAC495271d0F". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x6B175474E89094C44Da98b954EedeAC495271d0F". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:439:21:
    |
439 |         tokens[3] = 0x6b175474e89094c44da98b954eedeac495271d0f; // DAI
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:440:21:
    |
440 |         tokens[4] = 0x2260fac5e5542a773aa44fbcfedf7c193bc2c599; // WBTC
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xae7ab96520DE3A18E5e111B5EaAb095312D7fE84". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xae7ab96520DE3A18E5e111B5EaAb095312D7fE84". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:441:21:
    |
441 |         tokens[5] = 0xae7ab96520de3a18e5e111b5eaab095312d7fe84; // stETH
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x7f39C581F595b53c5Cb5b5f0ddA6c935e2CA0A0B". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x7f39C581F595b53c5Cb5b5f0ddA6c935e2CA0A0B". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:442:21:
    |
442 |         tokens[6] = 0x7f39c581f595b53c5cb5b5f0dda6c935e2ca0a0b; // wstETH
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xBe9895146f7AF43049ca1c1AE358B0541Ea49704". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xBe9895146f7AF43049ca1c1AE358B0541Ea49704". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:443:21:
    |
443 |         tokens[7] = 0xbe9895146f7af43049ca1c1ae358b0541ea49704; // cbETH
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xae78736Cd615f374D3085123A210448E74Fc6393". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xae78736Cd615f374D3085123A210448E74Fc6393". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:444:21:
    |
444 |         tokens[8] = 0xae78736cd615f374d3085123a210448e74fc6393; // rETH
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x5f98805A4E8be255a32880FDeC7F6728C6568bA0". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x5f98805A4E8be255a32880FDeC7F6728C6568bA0". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:445:21:
    |
445 |         tokens[9] = 0x5f98805a4e8be255a32880fdec7f6728c6568ba0; // LUSD
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x853d955aCEf822Db058eb8505911ED77F175b99e". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x853d955aCEf822Db058eb8505911ED77F175b99e". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:446:22:
    |
446 |         tokens[10] = 0x853d955acef822db058eb8505911ed77f175b99e; // FRAX
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x57Ab1ec28D129707052df4dF418D58a2D46d5f51". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x57Ab1ec28D129707052df4dF418D58a2D46d5f51". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:448:22:
    |
448 |         tokens[12] = 0x57ab1ec28d129707052df4df418d58a2d46d5f51; // sUSD
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xf939E0A03FB07F59A73314E73794Be0E57ac1b4E". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xf939E0A03FB07F59A73314E73794Be0E57ac1b4E". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:449:22:
    |
449 |         tokens[13] = 0xf939e0a03fb07f59a73314e73794be0e57ac1b4e; // crvUSD
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

